Added private constructor to FileMapper and change terminal operation to unmodifiable list