@@ -8,9 +8,10 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class FileMapper {
+
+    private FileMapper() {}
 
     public static FileDto toFileDto(File file) {
         return FileDto.builder()
@@ -32,7 +33,7 @@ public class FileMapper {
     public static List<FileMetaDataDto> toFileMetaDataDto(List<File> fileList) {
         return fileList.stream()
                 .map(FileMapper::toFileMetaDataDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static File toFile(MultipartFile file) {
